# ISGDModel

./: README.md  pyproject.toml
.github/: CODEOWNERS
csv/: comments.csv  predicts.csv
csv/comments/: 20250517_005620.csv  20250517_005659.csv  20250517_010104.csv  20250517_010702.csv  20250517_013014.csv  20250517_105456.csv  20250517_111706.csv  20250517_122910.csv  20250517_123035.csv  20250517_123244.csv  20250517_123415.csv  20250517_124759.csv  20250517_125811.csv  20250517_130108.csv  20250517_130345.csv  20250517_135025.csv  20250517_162247.csv  20250517_162405.csv  20250517_162454.csv  20250517_162606.csv  20250517_163855.csv  20250517_164335.csv  20250517_170022.csv  20250517_170134.csv  20250517_201108.csv  20250517_201219.csv  20250517_224926.csv  20250518_154619.csv  20250518_154959.csv  20250518_155319.csv  20250518_160605.csv  20250518_161440.csv  20250518_162837.csv  20250518_163154.csv  20250518_164014.csv  20250518_164415.csv  20250518_164723.csv
csv/dataset/: 1.csv  2.csv  20250517_005620.csv  20250517_005659.csv  20250517_010104.csv  20250517_010702.csv  20250517_013014.csv  20250517_105456.csv  20250517_111706.csv  20250517_122910.csv  20250517_123035.csv  20250517_123244.csv  20250517_123415.csv  20250517_124759.csv  20250517_125811.csv  20250517_130108.csv  20250517_130345.csv  20250517_135025.csv  20250517_162247.csv  20250517_162405.csv  20250517_162454.csv  20250517_162606.csv  20250517_163855.csv  20250517_164335.csv  (+15 more)
data/: comments.csv
scripts/: auto_label.py  fetch_comments.py  flag.py  normalized.py
src/: predict.py  train.py
(+56 files in other folders)
