[project]
name = "silver-train"
version = "0.1.0"
description = ""
authors = [
    {name = "KagChi",email = "samuel@stmikku.ac.id"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "google-api-python-client (>=2.169.0,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "datasets (>=3.6.0,<4.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "evaluate (>=0.4.3,<0.5.0)",
    "accelerate (>=1.7.0,<2.0.0)",
    "transformers (>=4.51.3,<5.0.0)",
    "emoji (>=2.14.1,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
